readme done, now to fix issue with database and how it talks to app

--- a/SuperBowlsCrud/src/main/webapp/create.html
+++ b/SuperBowlsCrud/src/main/webapp/create.html
@@ -12,7 +12,7 @@ Winner Score: <input type="text" name="winnerScore"/>
 Loser Score:<input type="text" name="loserScore"/><br>
 MVP: <input type="text" name="mvp"/>
 Stadium: <input type="text" name="stadium"/><br>
-<input type="submit" value="Add SuperBowl"/>
+<input type="submit" value="Submit"/>
 </form>
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
